--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
+        <version>3.8.1</version>
         <configuration>
           <release>${java.version}</release>
         </configuration>
@@ -132,7 +132,7 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>4.0.1</version>
+        <version>4.0.2</version>
         <executions>
           <execution>
             <goals>
@@ -151,7 +151,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.2.1</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -174,7 +174,7 @@
                 </transformer>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
-                    <Main-Class>home.GenerateExcel</Main-Class>
+                    <Main-Class>home.Main</Main-Class>
                   </manifestEntries>
                 </transformer>
               </transformers>
