--- a/pom.xml
+++ b/pom.xml
@@ -4,61 +4,55 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>home</groupId>
+  <groupId>broadridge</groupId>
   <artifactId>sttp</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>11</java.version>
-    <scala.version.major>2.12</scala.version.major>
-    <scala.version.minor>8</scala.version.minor>
+    <scala.version.major>2.13</scala.version.major>
+    <scala.version.minor>0</scala.version.minor>
     <scala.version>${scala.version.major}.${scala.version.minor}</scala.version>
+    <akka.http.version>10.1.9</akka.http.version>
     <akka.version>2.5.23</akka.version>
-    <!--akka.http.version>10.1.8</akka.http.version-->
     <sttp.version>1.6.3</sttp.version>
-    <junit.version>5.5.0</junit.version>
-    <junit.platform.launcher>1.5.0</junit.platform.launcher>
+    <json4s.version>3.6.7</json4s.version>
+    <junit.version>5.5.1</junit.version>
+    <junit.platform.launcher>1.5.1</junit.platform.launcher>
   </properties>
 
   <dependencies>
     <dependency>
-      <groupId>com.softwaremill.sttp</groupId>
-      <artifactId>akka-http-backend_${scala.version.major}</artifactId>
-      <version>${sttp.version}</version>
-    </dependency>
-<!--
-    <dependency>
-      <groupId>com.softwaremill.sttp</groupId>
-      <artifactId>json4s_${scala.version.major}</artifactId>
-      <version>${sttp.version}</version>
-    </dependency>
--->
-    <dependency> <!-- https://sttp.readthedocs.io/en/latest/examples.html -->
-      <groupId>org.json4s</groupId>
-      <artifactId>json4s-native_${scala.version.major}</artifactId>
-      <version>3.6.7</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.tika</groupId>
-      <artifactId>tika-core</artifactId>
-      <version>1.20</version>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-reflect</artifactId>
+      <version>${scala.version}</version>
     </dependency>
     <dependency>
       <groupId>com.typesafe.akka</groupId>
       <artifactId>akka-stream_${scala.version.major}</artifactId>
       <version>${akka.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-library</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-lang.modules</groupId>
-          <artifactId>scala-java8-compat_${scala.version.major}</artifactId>
-        </exclusion>
-      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-http_${scala.version.major}</artifactId>
+      <version>${akka.http.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.softwaremill.sttp</groupId>
+      <artifactId>akka-http-backend_${scala.version.major}</artifactId>
+      <version>${sttp.version}</version>
+    </dependency>
+    <dependency> <!-- https://sttp.readthedocs.io/en/latest/examples.html -->
+      <groupId>org.json4s</groupId>
+      <artifactId>json4s-native_${scala.version.major}</artifactId>
+      <version>${json4s.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-xml_2.13</artifactId>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
       <groupId>com.typesafe.akka</groupId>
@@ -70,34 +64,20 @@
       <artifactId>logback-classic</artifactId>
       <version>1.2.3</version>
     </dependency>
-
-    <dependency>
-      <groupId>org.scala-lang.modules</groupId>
-      <artifactId>scala-java8-compat_${scala.version.major}</artifactId>
-      <version>0.9.0</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-library</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-reflect</artifactId>
-      <version>${scala.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi-ooxml</artifactId>
-      <version>4.1.0</version>
-    </dependency>
-
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-math3</artifactId>
       <version>3.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-core</artifactId>
+      <version>1.20</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>4.1.0</version>
     </dependency>
 
     <dependency>
@@ -135,6 +115,15 @@
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
         <version>4.1.0</version>
+        <configuration>
+          <args>
+            <arg>-unchecked</arg>
+            <arg>-deprecation</arg>
+            <arg>-explaintypes</arg>
+            <arg>-feature</arg>
+            <arg>-Xdev</arg>
+          </args>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -143,14 +132,6 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <args>
-            <arg>-unchecked</arg>
-            <arg>-Xdev</arg>
-            <arg>-Ypartial-unification</arg>
-            <arg>-Ywarn-dead-code</arg>
-          </args>
-        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-shade-plugin</artifactId>
@@ -185,6 +166,46 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.1.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.2</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-install-plugin</artifactId>
+        <version>2.5.2</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.7.1</version>
+      </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <repository>
+      <id>broadridge-repository</id>
+      <name>broadridge-repository</name>
+      <url>https://nexus.devops.broadridge.net/repository/JCENTER</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>broadridge-plugin-repository</id>
+      <name>broadridge-plugin-repository</name>
+      <url>https://nexus.devops.broadridge.net/repository/JCENTER</url>
+    </pluginRepository>
+  </pluginRepositories>
 </project>
